--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-mock-store": "^1.5.1"
   },
-   "homepage" : "http://zsoltkerekes.github.io/series-finder"
+   "homepage" : "https://zsoltkerekes.github.io/series-finder"
 }
